--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,6 @@
     <div id="root"></div>
 
     <div id="signup"></div>
-    <script type="module" src="/todolist/client/src/main.jsx"></script>
+    <script type="module" src="client/src/main.jsx"></script>
   </body>
 </html>
